[package]
name = "aardwolf-models"
version = "0.1.0"
authors = ["Riley Trautman <rileyt@spiceworks.com>"]

[dependencies]
bcrypt = "0.2"
chrono = "0.4"
chrono-tz = "0.4"
failure = "0.1"
log = "0.4"
mime = "0.3"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"

[dependencies.diesel]
version = "1.2"
features = ["chrono", "postgres", "serde_json"]

[dev-dependencies]
dotenv = "0.11"
env_logger = "0.5"
